# rogue-updatable-matrix-lookup-argument

./: .gitignore  CMakeLists.txt  README.md
src/: basic_utils.cpp  basic_utils.hpp  config_pc.hpp  ec.cpp  ec.hpp  gipa.cpp  gipa.hpp  kopis.cpp  kopis.hpp  main.cpp  mimc.cpp  mimc.hpp  multi_kzg.cpp  multi_kzg.hpp  prover.cpp  prover.hpp  prover_v2.cpp  prover_v2.hpp  setup.cpp  setup.hpp  verifier.cpp  verifier.hpp  verifier_v2.cpp  verifier_v2.hpp
tests/: input-ex.txt  output-ex.txt
